[package]
name = "mesurement"
version = "0.1.0"
authors = ["EmbededIlya <ilyatim2018@mail.ru>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.11.0"
esp-backtrace = { version = "0.7.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32c3"] }
critical-section = "1.1.1"